fix: left nav spacing right side bg Mobile bottom

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-hitech/css/accessibility-features.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-hitech/css/accessibility-features.less
@@ -1,10 +1,16 @@
-
-
 html.adobeguides-text-size
   .custom-container
   .gu-custom-container
   .col-9grid
   .col-9grid-container {
+  margin-top: 3.538rem;
+}
+
+html.adobeguides-text-size
+  .custom-container
+  .gu-custom-container
+  .col-3grid
+  .outer-container {
   margin-top: 3.538rem;
 }
 
@@ -19,7 +25,6 @@ html#adobeguides-dark-contrast {
 }
 
 html.adobeguides-text-spacing {
-  
   @media (max-width: 1023px) {
     .social-share-container .social-links {
       width: max-content;
